--- a/templates/home.html
+++ b/templates/home.html
@@ -2,17 +2,21 @@
 <h2>Angular 2 is sexy</h2>
 <button ng-click="clickMe()">Click me</button>
 
+<div class="valign-wrapper">
+    <h5 class="valign">This should be vertically aligned</h5>
+</div>
+
 <div class="row">
-  <div class="col s1">1</div>
-  <div class="col s1">2</div>
-  <div class="col s1">3</div>
-  <div class="col s1">4</div>
-  <div class="col s1">5</div>
-  <div class="col s1">6</div>
-  <div class="col s1">7</div>
-  <div class="col s1">8</div>
-  <div class="col s1">9</div>
-  <div class="col s1">10</div>
-  <div class="col s1">11</div>
-  <div class="col s1">12</div>
+    <div class="col s1">1</div>
+    <div class="col s1">2</div>
+    <div class="col s1">3</div>
+    <div class="col s1">4</div>
+    <div class="col s1">5</div>
+    <div class="col s1">6</div>
+    <div class="col s1">7</div>
+    <div class="col s1">8</div>
+    <div class="col s1">9</div>
+    <div class="col s1">10</div>
+    <div class="col s1">11</div>
+    <div class="col s1">12</div>
 </div>
