--- a/templates/home.html
+++ b/templates/home.html
@@ -1,6 +1,6 @@
-<h1>{{title}}</h1>
-<h2>Angular 2 is sexy</h2>
-<button ng-click="clickMe()">Click me</button>
+<div class="page-header">
+  <h1>{{title}}</h1>
+</div>
 
 <div class="valign-wrapper">
     <h5 class="valign">This should be vertically aligned</h5>
