--- a/templates/home.html
+++ b/templates/home.html
@@ -1,22 +1,19 @@
 <div class="page-header">
   <h1>{{title}}</h1>
-</div>
-
-<div class="valign-wrapper">
-    <h5 class="valign">This should be vertically aligned</h5>
+  <h2 (click)="doSomething()">{{name}}</h2>
+  <input type="text" name="name" value="My button" [(ngModel)]="todoModel" (keyup)="$event.target.value">
+  {{todoModel}}
 </div>
 
 <div class="row">
-    <div class="col s1">1</div>
-    <div class="col s1">2</div>
-    <div class="col s1">3</div>
-    <div class="col s1">4</div>
-    <div class="col s1">5</div>
-    <div class="col s1">6</div>
-    <div class="col s1">7</div>
-    <div class="col s1">8</div>
-    <div class="col s1">9</div>
-    <div class="col s1">10</div>
-    <div class="col s1">11</div>
-    <div class="col s1">12</div>
+  <div class="col-sm-6 col-md-4">
+    <div class="thumbnail">
+      <img src="..." alt="...">
+      <div class="caption">
+        <h3>Thumbnail label</h3>
+        <p>...</p>
+        <p><a href="#" class="btn btn-primary" role="button">Button</a> <a href="#" class="btn btn-default" role="button">Button</a></p>
+      </div>
+    </div>
+  </div>
 </div>
